<resources>
    <string name="app_name">CarLoanCalculator</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Car Loan</string>
    <string name="second_fragment_label">Interest</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Interest</string>

    <string name="carLoan">Car Loan</string>
    <string name="price">Car Price</string>
    <string name="down_payment">Down Payment</string>
    <string name="interest_rate">Interest Rate(%)</string>
    <string name="income">Income</string>
    <string name="period">Loan Period (year)</string>
    <string name="uni_grad">I\'m a university graduate</string>
    <string name="monthly_payment"> Monthly Payment</string>
    <string name="result">Result</string>
    <string name="positive_result">You are eligible</string>
    <string name="negative_result">You are not eligible</string>
    <string name="calculate">Calculate</string>
    <string name="close">Close</string>
    <string name="bank">Bank</string>
    <string name="about">About</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Developed by : Chan Owen</string>
    <string name="tnc">Terms and Conditions</string>
    <string name="version">Version:</string>

</resources>